<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:text="@string/descricao"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:maxLines="2"
        android:maxLength="50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences|textMultiLine"
        android:ems="10"
        android:hint="@string/hint_descricao"
        android:id="@+id/editText_criar_descricao_post">
        <requestFocus />
    </EditText>

    <TextView
        android:paddingTop="10dp"
        android:text="@string/comentario"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:maxLines="2"
        android:maxLength="100"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences|textMultiLine"
        android:ems="10"
        android:hint="@string/hint_comentario"
        android:id="@+id/editText_criar_comentario_post" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2" >

        <Button
            android:id="@+id/btnTakePic"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="55dp"
            android:text="@string/capturarImagem"/>

        <Button
            android:id="@+id/btnGetPicFromFile"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="55dp"
            android:text="@string/escolherImagem"/>

    </LinearLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:id="@+id/imgViewPic"
        />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="Enviar"/>

    <LinearLayout
        android:paddingTop="10dp"
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/imagemView"
            /> -->
        <fragment
            android:id="@+id/map"
            class="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <RelativeLayout
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:id="@+id/selectImagem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_imagem"
                android:layout_alignParentLeft="true"/>

            <ImageButton
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:id="@+id/button_add_post"
                android:background="@drawable/round_button_add_post"
                android:src="@drawable/ic_add"/>
        </RelativeLayout>
    </LinearLayout>



</LinearLayout>
