<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="postaround.tcc.inatel.br.fragment.ConfiguracaoFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="30dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">


        <postaround.tcc.inatel.br.Utils.PostAiTextView
            android:textColor="@color/orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/notificacao" />

        <View
            android:id="@+id/divisor1"
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="@color/orange" />

        <LinearLayout
            android:paddingTop="5dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioGroup
                android:id="@+id/group_raio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <postaround.tcc.inatel.br.Utils.PostAiRadioButton
                    android:textColor="@color/orange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/raio_um"
                    android:id="@+id/raio_um"
                    android:checked="true"/>
                <postaround.tcc.inatel.br.Utils.PostAiRadioButton
                    android:id="@+id/raio_dois"
                    android:textColor="@color/orange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/raio_dois"/>
                <postaround.tcc.inatel.br.Utils.PostAiRadioButton
                    android:textColor="@color/orange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/raio_tres"
                    android:id="@+id/raio_tres" />
            </RadioGroup>

        </LinearLayout>
        <postaround.tcc.inatel.br.Utils.PostAiTextView
            android:textColor="@color/orange"
            android:paddingTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/conta" />

        <View
            android:id="@+id/divisor2"
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="@color/orange" />

        <postaround.tcc.inatel.br.Utils.PostAiButton
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_apagar_conta"
            android:id="@+id/bt_apagar_conta"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</FrameLayout>
